--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
       body {
         font-family: poppins;
       }
+
+      h1 {
+        font-size: 25px;
+      }
     </style>
   </head>
   <body>
