--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-      body {
-        font-family: poppins;
+      * {
+        padding: 0;
+        margin: 0;
       }
 
-      h1 {
-        font-size: 25px;
+      body {
+        box-sizing: border-box;
       }
     </style>
   </head>
