--- a/index.html
+++ b/index.html
@@ -5,13 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        body {
-            color: green;
-        }
-    </style>
 </head>
 <body>
     <h1>First</h1>
+    <h1>Jann Karlo Tiu</h1>
 </body>
 </html>
